# durango

./: Cargo.toml
boards/: A.csv  B.csv  C.csv  D.csv  E.csv  F.csv  G.csv  H.csv  I.csv  J.csv  K.csv  L.csv  M.csv  N.csv  O.csv  P.csv  Q.csv  R.csv  Y.csv  Z.csv
examples/: autoplay.rs  render_board.rs
layouts/: easy1.csv  easy2.csv  first.csv  hard1.csv  hard2.csv  medium1.csv  medium2.csv
src/: agent.rs  api.rs  cards.rs  data.rs  game.rs  graph.rs  lib.rs  player.rs
src/agent/: common.rs  greedy.rs  random.rs  turn_planner.rs
