[package]
name = "durango"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_repr = "0"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
