[package]
name = "durango"
version = "0.1.12"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blau_api = { git = "https://github.com/perimosocordiae/blau_api" }
csv = "1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0"

[dev-dependencies]
assert_matches = "1"
clap = { version = "4", features = ["derive"] }
